test/param/bharshbarg/setMultiple.good
setMultiple.chpl:2: error: illegal lvalue in assignment
setMultiple.chpl:2: error: parameter set multiple times
